--- a/Demo/demo.html
+++ b/Demo/demo.html
@@ -11,7 +11,20 @@
     <script src="../Source/TabPane.js" type="text/javascript"></script>
     <script type="text/javascript">
         document.addEvent('domready', function() {
-            new TabPane('demo', {tabSelector: '.tab', contentSelector: '.content'});
+            new TabPane('demo');
+
+            $('new-tab').addEvent('click', function() {
+                var title = $('new-tab-title').get('value');
+                var content = $('new-tab-content').get('value');
+
+                if (!title || !content) {
+                    window.alert('Title or content text empty, please fill in some text.');
+                    return;
+                }
+
+                $('demo').getElement('ul').adopt(new Element('li', {'class': 'tab', text: title}));
+                $('demo').adopt(new Element('p', {'class': 'content', text: content}).setStyle('display', 'none'));
+            });
         });
     </script>
     <style type="text/css">
@@ -20,6 +33,9 @@
             padding: 0 1em;
             list-style: none;
             cursor: pointer;
+        }
+        .tab.active {
+            background-color: #ccf;
         }
         .input-wrapper {
             padding: .2em;
@@ -43,7 +59,7 @@
     <ul>
         <li class="tab">First tab</li>
         <li class="tab">Second tab</li>
-    </li>
+    </ul>
     <p class="content">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed elit ligula, consectetur sed sodales quis, fringilla ut ipsum. Nunc sodales, massa id lobortis posuere, dolor libero rutrum quam, sed luctus ipsum dolor vitae sem. Praesent ornare metus sed nunc auctor tristique. Pellentesque felis arcu, eleifend at commodo luctus, luctus at tortor. Suspendisse potenti. Nunc tempor elit est. Sed molestie suscipit iaculis. Ut porttitor, arcu sit amet aliquet congue, nibh orci pharetra dui, in porta sapien dui in est. Vestibulum nisi sapien, posuere consequat ornare a, cursus vel felis. Fusce molestie, mauris a fringilla lacinia, mauris nibh accumsan leo, sit amet porta purus augue eget est. 
     </p>
