add image to pages

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     </script>
     <link href="style.css" type="text/css" rel="stylesheet" />
     <style type="text/css">
+        #image {
+            float: right;
+            border: 1px #333 solid;
+        }
         a {
             color: #900;
         }
@@ -64,6 +68,7 @@
 <h1>Simple Tab Pane</h1>
 
 <p>
+    <img src="simple-tab-pane.png" id="image" alt="Simple Tab Pane" />
     Demo for a simple tab pane MooTools plugin. Below you can see a simple tab pane with three tabs, enabling a user to switch between three pieces of content. <br />
     Due to the nature of the inner workings of the tab pane, it will remain functional even after completely reloading it with an asynchronous request. As long as the container the pane is created with stays on the page, the tab pane will remain intact. You can simulate this on this page by adding a new tab using the form on the bottom of the page. 
 </p>
