--- a/Demo/demo.html
+++ b/Demo/demo.html
@@ -6,8 +6,8 @@
 
 <head>
     <title>Simple MooTools TabPane component</title>
-    <script src="mootools-1.2.4-core.js" type="text/javascript"></script>
-    <script src="mootools-1.2.4-more.js" type="text/javascript"></script>
+    <script src="mootools-core-1.3.2-full-nocompat.js" type="text/javascript"></script>
+    <script src="mootools-more-1.3.2.1.js" type="text/javascript"></script>
     <script src="../Source/TabPane.js" type="text/javascript"></script>
     <script type="text/javascript">
         document.addEvent('domready', function() {
