--- a/Demo/demo.html
+++ b/Demo/demo.html
@@ -6,17 +6,19 @@
 
 <head>
     <title>Simple MooTools TabPane component</title>
-    <script src="mootools-core-1.3.2-full-nocompat.js" type="text/javascript"></script>
-    <script src="mootools-more-1.3.2.1.js" type="text/javascript"></script>
+    <script src="mootools-core-1.4.2.js" type="text/javascript"></script>
     <script src="../Source/TabPane.js" type="text/javascript"></script>
     <script type="text/javascript">
         document.addEvent('domready', function() {
             var tabPane = new TabPane('demo');
 
             $('demo').addEvent('click:relay(.remove)', function(e) {
-                new Event(e).stop();
+				// stop the event from bubbling up and causing a native click
+                e.stop();
                 var parent = this.getParent('.tab');
+				// find the index for the tab that needs to be closed 
                 var index = $('demo').getElements('.tab').indexOf(parent);
+				// close the tab (closeTab takes care of selecting an adjacent tab) 
                 tabPane.closeTab(index);
             });
 
