--- a/Demo/demo.html
+++ b/Demo/demo.html
@@ -8,6 +8,7 @@
     <title>Simple MooTools TabPane component</title>
     <script src="mootools-core-1.4.2.js" type="text/javascript"></script>
     <script src="../Source/TabPane.js" type="text/javascript"></script>
+    <script src="../Source/TabPane.Extra.js" type="text/javascript"></script>
     <script type="text/javascript">
         document.addEvent('domready', function() {
             var tabPane = new TabPane('demo', {}, function() {
