--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
-<!DOCTYPE html 
-    PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html>
 
 <head>
     <title>Simple MooTools TabPane component</title>
-    <script src="mootools-1.2.4-core.js" type="text/javascript"></script>
-    <script src="mootools-1.2.4-more.js" type="text/javascript"></script>
+	<meta charset="UTF-8" />
+    <script src="mootools-core-1.5.0-full-nocompat.js" type="text/javascript"></script>
     <script src="TabPane.js" type="text/javascript"></script>
+    <script src="TabPane.Extra.js" type="text/javascript"></script>
     <script type="text/javascript">
         document.addEvent('domready', function() {
-            var tabPane = new TabPane('demo');
+            var tabPane = new TabPane('demo', {}, function() {
+				var showTab = window.location.hash.match(/tab=(\d+)/);
+				return showTab ? showTab[1] : 0;
+			});
 
             $('demo').addEvent('click:relay(.remove)', function(e) {
-                new Event(e).stop();
+				// stop the event from bubbling up and causing a native click
+                e.stop();
                 var parent = this.getParent('.tab');
-                var index = $('demo').getElements('.tab').indexOf(parent);
-                tabPane.closeTab(index);
+				// close the tab (closeTab takes care of selecting an adjacent tab)
+                tabPane.close(parent);
             });
 
             $('new-tab').addEvent('click', function() {
@@ -29,27 +32,17 @@
                     return;
                 }
 
-                $('demo').getElement('ul').adopt(new Element('li', {'class': 'tab', text: title}).adopt(new Element('span', {'class': 'remove', html: '&times'})));
-                $('demo').adopt(new Element('p', {'class': 'content', text: content}).setStyle('display', 'none'));
+                title = new Element('li', {'class': 'tab', text: title}).adopt(new Element('span', {'class': 'remove', html: '&times'}));
+				content = new Element('p', {'class': 'content', text: content}).setStyle('display', 'none');
+				tabPane.add(title, content);
             });
         });
     </script>
     <link href="style.css" type="text/css" rel="stylesheet" />
     <style type="text/css">
-        #image {
-            float: right;
-            border: 1px #333 solid;
-        }
-        a {
-            color: #900;
-        }
-        hr {
-            margin: 1em 0;
-        }
         .input-wrapper {
             padding: .2em;
-            border: 1px #444 solid;
-            background-color: #333;
+            border: 1px #333 solid;
         }
         .input-wrapper input, .input-wrapper textarea {
             width: 100%;
@@ -65,19 +58,7 @@
 
 <body>
 
-<h1>Simple Tab Pane</h1>
-
-<p>
-    <img src="simple-tab-pane.png" id="image" alt="Simple Tab Pane" />
-    Demo for a simple tab pane MooTools plugin. Below you can see a simple tab pane with three tabs, enabling a user to switch between three pieces of content. <br />
-    Due to the nature of the inner workings of the tab pane, it will remain functional even after completely reloading it with an asynchronous request. As long as the container the pane is created with stays on the page, the tab pane will remain intact. You can simulate this on this page by adding a new tab using the form on the bottom of the page. 
-</p>
-
-<p>
-    For more information and documentation see <a href="http://mootools.net/forge/p/simple_tab_pane">the MooTools Forge page for this plugin</a> or <a href="http://github.com/akaIDIOT/MooTools-TabPane">the github page</a>.
-</p>
-
-<hr />
+<h1>Tab pane</h1>
 
 <div id="demo">
     <ul class="tabs">
@@ -86,10 +67,10 @@
         <li class="tab">Pane <span class="remove">&times;</span></li>
     </ul>
     <p class="content">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed elit ligula, consectetur sed sodales quis, fringilla ut ipsum. Nunc sodales, massa id lobortis posuere, dolor libero rutrum quam, sed luctus ipsum dolor vitae sem. Praesent ornare metus sed nunc auctor tristique. Pellentesque felis arcu, eleifend at commodo luctus, luctus at tortor. Suspendisse potenti. Nunc tempor elit est. Sed molestie suscipit iaculis. Ut porttitor, arcu sit amet aliquet congue, nibh orci pharetra dui, in porta sapien dui in est. Vestibulum nisi sapien, posuere consequat ornare a, cursus vel felis. Fusce molestie, mauris a fringilla lacinia, mauris nibh accumsan leo, sit amet porta purus augue eget est. 
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed elit ligula, consectetur sed sodales quis, fringilla ut ipsum. Nunc sodales, massa id lobortis posuere, dolor libero rutrum quam, sed luctus ipsum dolor vitae sem. Praesent ornare metus sed nunc auctor tristique. Pellentesque felis arcu, eleifend at commodo luctus, luctus at tortor. Suspendisse potenti. Nunc tempor elit est. Sed molestie suscipit iaculis. Ut porttitor, arcu sit amet aliquet congue, nibh orci pharetra dui, in porta sapien dui in est. Vestibulum nisi sapien, posuere consequat ornare a, cursus vel felis. Fusce molestie, mauris a fringilla lacinia, mauris nibh accumsan leo, sit amet porta purus augue eget est.
     </p>
     <p class="content">
-        Sed cursus tristique bibendum. Quisque et diam mattis erat accumsan tincidunt id eu libero. Ut commodo ante ut tortor iaculis eget cursus magna pretium. Sed non enim arcu. Aenean mattis auctor lacinia. Nunc vel diam quis purus hendrerit viverra. Quisque porttitor magna a sem suscipit dapibus. Vivamus et lectus turpis, at ornare dolor. Aliquam enim metus, porta eget dapibus nec, mollis a lacus. Aliquam id tortor in justo tristique sodales quis nec orci. Cras placerat, orci at egestas dictum, augue purus varius quam, nec blandit nulla odio nec tellus. Nulla egestas congue blandit. Duis ultricies, quam in pretium semper, metus justo congue justo, a pretium diam velit ut urna. Vestibulum fermentum bibendum nunc, ac volutpat ligula pellentesque in. Praesent blandit libero a nunc vulputate fermentum ac nec est. Donec est arcu, aliquam in vulputate a, consectetur in dolor. Pellentesque pulvinar auctor dapibus. Proin elit libero, facilisis vel ultricies vel, bibendum in sem. 
+        Sed cursus tristique bibendum. Quisque et diam mattis erat accumsan tincidunt id eu libero. Ut commodo ante ut tortor iaculis eget cursus magna pretium. Sed non enim arcu. Aenean mattis auctor lacinia. Nunc vel diam quis purus hendrerit viverra. Quisque porttitor magna a sem suscipit dapibus. Vivamus et lectus turpis, at ornare dolor. Aliquam enim metus, porta eget dapibus nec, mollis a lacus. Aliquam id tortor in justo tristique sodales quis nec orci. Cras placerat, orci at egestas dictum, augue purus varius quam, nec blandit nulla odio nec tellus. Nulla egestas congue blandit. Duis ultricies, quam in pretium semper, metus justo congue justo, a pretium diam velit ut urna. Vestibulum fermentum bibendum nunc, ac volutpat ligula pellentesque in. Praesent blandit libero a nunc vulputate fermentum ac nec est. Donec est arcu, aliquam in vulputate a, consectetur in dolor. Pellentesque pulvinar auctor dapibus. Proin elit libero, facilisis vel ultricies vel, bibendum in sem.
     </p>
     <p class="content">
         Donec feugiat tellus nec tortor ultrices mollis. Sed ut nunc ac dui fermentum rutrum. Duis interdum gravida gravida. Duis non ligula sit amet lacus iaculis ornare. Morbi quis purus elementum ante luctus iaculis vel vitae justo. Nullam quis neque sed lorem hendrerit hendrerit. Etiam sagittis, quam et sagittis lacinia, turpis tellus scelerisque lacus, venenatis pulvinar lectus lectus vitae ligula. Quisque vel nibh nunc, non mattis lectus. Praesent et purus urna, a porttitor lorem. Sed lorem nibh, consectetur vel imperdiet in, tempor et sapien. Aliquam erat volutpat.
@@ -103,7 +84,7 @@
     </div></div>
     <h2>New tab content</h2>
     <div class="input-wrapper"><div>
-        <textarea cols="20" rows="4" name="content" id="new-tab-content"></textarea>
+        <textarea cols="20" rows="4" name="content" id="new-tab-content"> </textarea>
     </div></div>
     <button id="new-tab" style="margin-top:1em;">Add tab</button>
 </div>
@@ -111,4 +92,3 @@
 </body>
 
 </html>
-
